[gd_scene load_steps=19 format=2]

[ext_resource path="res://assets/background.jpg" type="Texture" id=1]
[ext_resource path="res://assets/fonts/xolonium-regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://HabitStore.gd" type="Script" id=3]
[ext_resource path="res://Habit.tscn" type="PackedScene" id=4]
[ext_resource path="res://Score.tscn" type="PackedScene" id=5]
[ext_resource path="res://PauseOrgan.tscn" type="PackedScene" id=6]
[ext_resource path="res://Exercise.gd" type="Script" id=7]
[ext_resource path="res://HealthyFood.gd" type="Script" id=8]
[ext_resource path="res://NoProcessedFood.gd" type="Script" id=9]
[ext_resource path="res://NoSmoking.gd" type="Script" id=11]
[ext_resource path="res://Sunscream.gd" type="Script" id=12]
[ext_resource path="res://NoAlcohol.gd" type="Script" id=13]
[ext_resource path="res://Vaccine.gd" type="Script" id=14]
[ext_resource path="res://Urologist.gd" type="Script" id=15]
[ext_resource path="res://assets/pause.png" type="Texture" id=16]
[ext_resource path="res://PauseRegular.gd" type="Script" id=17]

[sub_resource type="DynamicFont" id=1]
size = 21
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="HabitStore" type="Node2D"]
pause_mode = 1
script = ExtResource( 3 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 516, 348 )
scale = Vector2( 0.160889, 0.160889 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="ReturnButton" type="Button" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 125.0
margin_bottom = 48.0
theme = SubResource( 2 )
text = "VOLTAR"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" parent="." instance=ExtResource( 5 )]
position = Vector2( -119, -203 )
scale = Vector2( 1.4, 1.4 )

[node name="GridContainer" type="GridContainer" parent="."]
margin_left = 74.0
margin_top = 88.0
margin_right = 841.0
margin_bottom = 564.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exercise" parent="GridContainer" instance=ExtResource( 4 )]
position = Vector2( 250, 45 )
script = ExtResource( 7 )

[node name="HealthyEating" parent="GridContainer" instance=ExtResource( 4 )]
position = Vector2( 50, 245 )
script = ExtResource( 8 )

[node name="Sunscream" parent="GridContainer" instance=ExtResource( 4 )]
position = Vector2( 450, 45 )
script = ExtResource( 12 )

[node name="Urologist" parent="GridContainer" instance=ExtResource( 4 )]
position = Vector2( 650, 45 )
script = ExtResource( 15 )

[node name="NoAlcohol" parent="GridContainer" instance=ExtResource( 4 )]
position = Vector2( 250, 245 )
script = ExtResource( 13 )

[node name="NoProcessedFood" parent="GridContainer" instance=ExtResource( 4 )]
position = Vector2( 450, 245 )
script = ExtResource( 9 )

[node name="Vaccine" parent="GridContainer" instance=ExtResource( 4 )]
position = Vector2( 650, 45 )
script = ExtResource( 14 )

[node name="NoSmoking" parent="GridContainer" instance=ExtResource( 4 )]
position = Vector2( 50, 45 )
script = ExtResource( 11 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Pause" parent="CanvasLayer" instance=ExtResource( 6 )]
script = ExtResource( 17 )

[node name="PauseButton" type="Button" parent="."]
margin_left = 904.0
margin_top = 485.0
margin_right = 1428.0
margin_bottom = 1003.0
rect_scale = Vector2( 0.2, 0.2 )
icon = ExtResource( 16 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="ReturnButton" to="." method="_on_ReturnButton_pressed"]
[connection signal="pressed" from="PauseButton" to="CanvasLayer/Pause" method="_on_PauseButton_pressed"]

[editable path="GridContainer/Exercise"]
[editable path="GridContainer/Sunscream"]
[editable path="GridContainer/NoProcessedFood"]
